[package]
edition.workspace = true
name              = "moltis-projects"
version.workspace = true

[dependencies]
anyhow      = { workspace = true }
async-trait = "0.1"
serde       = { workspace = true }
serde_json  = { workspace = true }
sqlx        = { workspace = true }
tokio       = { workspace = true }
toml        = { workspace = true }
tracing     = { workspace = true }
uuid        = { workspace = true }

[dev-dependencies]
tempfile = "3"
