[package]
description       = "QMD memory backend for moltis - optional sidecar-based hybrid search"
edition.workspace = true
name              = "moltis-qmd"
version.workspace = true

[dependencies]
anyhow        = { workspace = true }
async-trait   = { workspace = true }
moltis-agents = { workspace = true }
moltis-memory = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
sha2     = { workspace = true }
sqlx     = { workspace = true }

[lints]
workspace = true
