[package]
edition.workspace = true
name              = "moltis-signal"
version.workspace = true

[dependencies]
async-trait     = { workspace = true }
futures         = { workspace = true }
moltis-channels = { workspace = true }
moltis-common   = { workspace = true }
reqwest         = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
time            = { workspace = true }
tokio           = { workspace = true }
tokio-util      = { workspace = true }
tracing         = { workspace = true }
url             = { workspace = true }
uuid            = { workspace = true }

[features]
default = []
metrics = []

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
