[package]
edition.workspace = true
name              = "moltis-skills"
version.workspace = true

[dependencies]
anyhow                = { workspace = true }
async-trait           = "0.1"
directories           = { workspace = true }
flate2                = "1"
moltis-metrics        = { optional = true, workspace = true }
notify-debouncer-full = { optional = true, version = "0.7" }
reqwest               = { workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
serde_yaml            = { workspace = true }
tar                   = "0.4"
tokio                 = { workspace = true }
tracing               = { workspace = true }

[features]
default      = []
file-watcher = ["dep:notify-debouncer-full"]
metrics      = ["dep:moltis-metrics"]

[dev-dependencies]
tempfile = "3"
tokio    = { features = ["macros", "rt"], workspace = true }

[lints]
workspace = true
