[package]
edition.workspace = true
name              = "moltis-skills"
version.workspace = true

[dependencies]
async-trait           = { workspace = true }
flate2                = { workspace = true }
include_dir           = { optional = true, workspace = true }
moltis-config         = { workspace = true }
moltis-metrics        = { optional = true, workspace = true }
notify-debouncer-full = { optional = true, workspace = true }
reqwest               = { workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
serde_yaml            = { workspace = true }
tar                   = { workspace = true }
thiserror             = { workspace = true }
tokio                 = { workspace = true }
tracing               = { workspace = true }
walkdir               = { workspace = true }

[features]
default        = []
bundled-skills = ["dep:include_dir"]
file-watcher   = ["dep:notify-debouncer-full"]
metrics        = ["dep:moltis-metrics"]

[dev-dependencies]
rstest   = { workspace = true }
tempfile = { workspace = true }
tokio    = { features = ["macros", "rt"], workspace = true }

[lints]
workspace = true
