[package]
edition.workspace = true
name              = "moltis-tools"
version.workspace = true

[features]
default = ["metrics"]
metrics = ["dep:moltis-metrics"]

[dependencies]
anyhow            = { workspace = true }
async-trait       = "0.1"
base64.workspace  = true
moltis-agents     = { workspace = true }
moltis-common     = { workspace = true }
moltis-config     = { workspace = true }
moltis-cron       = { workspace = true }
moltis-metrics    = { optional = true, workspace = true }
moltis-sessions   = { workspace = true }
moltis-skills     = { workspace = true }
reqwest           = { workspace = true }
secrecy.workspace = true
serde             = { workspace = true }
serde_json        = { workspace = true }
sqlx              = { workspace = true }
tokio             = { workspace = true }
tracing           = { workspace = true }
url               = "2"
uuid              = { workspace = true }

[dev-dependencies]
tempfile     = "3"
tokio        = { features = ["macros", "rt-multi-thread"], workspace = true }
tokio-stream = { workspace = true }

[lints]
workspace = true
