[package]
edition.workspace    = true
name                 = "moltis-web"
repository.workspace = true
version.workspace    = true

[dependencies]
askama          = { workspace = true }
axum            = { workspace = true }
axum-extra      = { features = ["cookie"], workspace = true }
base64          = { workspace = true }
chrono          = { features = ["serde"], workspace = true }
futures         = { workspace = true }
gix             = { workspace = true }
include_dir     = { optional = true, workspace = true }
moltis-channels = { workspace = true }
moltis-config   = { workspace = true }
moltis-cron     = { workspace = true }
moltis-gateway  = { workspace = true }
moltis-httpd    = { workspace = true }
moltis-media    = { workspace = true }
moltis-skills   = { workspace = true }
moltis-tools    = { workspace = true }
portable-pty    = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
sysinfo         = { workspace = true }
thiserror       = { workspace = true }
tokio           = { workspace = true }
tokio-util      = { workspace = true }
tracing         = { workspace = true }
url             = { workspace = true }
uuid            = { workspace = true }
which           = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
agent              = ["moltis-gateway/agent"]
default            = ["embedded-assets"]
embedded-assets    = ["dep:include_dir"]
graphql            = ["moltis-gateway/graphql", "moltis-httpd/graphql"]
mdns               = ["moltis-httpd/mdns"]
metrics            = ["moltis-httpd/metrics"]
ngrok              = ["moltis-httpd/ngrok"]
push-notifications = ["moltis-httpd/push-notifications"]
slack              = ["moltis-httpd/slack"]
tailscale          = ["moltis-httpd/tailscale"]
tls                = ["moltis-httpd/tls"]
trusted-network    = ["moltis-httpd/trusted-network"]
vault              = ["moltis-httpd/vault"]
voice              = []
web-ui             = ["moltis-httpd/web-ui"]

[lints]
workspace = true
